--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1370,9 +1370,9 @@ ul.social-icons li {
   padding: 0 0 10px 0;
 }
 /** Content tabs **/
-.nav-tabs.nav-justified{
+/* .nav-tabs.nav-justified{
   border-bottom: 1px solid #f58220;
-}
+} */
 #tabs-info .nav-tabs li a{
   font-size: 16px;
   color: #727272;
@@ -1572,6 +1572,12 @@ ul.social-icons li {
 .tab-content {
   padding: 10px;
 }
+@media (min-width: 768px) {
+  .nav-tabs.nav-justified>li>a{
+    border-bottom: 1px solid #ff8100;
+  }
+}
+
 @media (max-width: 767px) {
   .nav-tabs.nav-tabs-dropdown,
   .nav-tabs-dropdown {
